# ohbm2026

./: .env.sample  .gitignore  404.html  AGENTS.md  CLAUDE.md  CNAME  CONSTITUTION.md  README.md  index.html  pyproject.toml
.githooks/: pre-commit
.specify/: feature.json
_app/: version.json
about/: index.html
docs/: README.md  abstracts-book-plan.md  claims-semantic-clustering-plan.md  ohbm26-plan.md  per-stage-pattern.md  poster-layout-optimizer-plan.md  poster-semantic-category-experiments-plan.md  poster-sequencing-benchmark-plan.md  reproducibility-vision.md  semantic-category-evaluation-plan.md  static-ui-plan.md
experiments/: README.md
memory/: summary.md
neuroscape/: 404.html  index.html
ohbm2026/: 404.html  index.html
pr-10/: 404.html  index.html
pr-13/: 404.html  index.html
pr-14/: 404.html  index.html
pr-15/: 404.html  index.html
pr-16/: 404.html  index.html
pr-17/: 404.html  index.html
pr-18/: 404.html  index.html
pr-19/: 404.html
pr-35/: index.html
pr-36/: 404.html  index.html
pr-37/: 404.html  index.html
pr-40/: index.html
pr-41/: index.html
pr-42/: index.html
pr-45/: index.html
pr-46/: index.html
pr-47/: index.html
pr-48/: index.html
pr-49/: index.html
pr-51/: index.html
pr-53/: index.html
pr-55/: index.html
pr-57/: index.html
pr-59/: index.html
pr-60/: index.html
pr-61/: index.html
pr-63/: index.html
pr-64/: index.html
pr-9/: 404.html  index.html
sandbox/: index.html
scripts/: benchmark_poster_sequencing.py  build_category_evaluation_rollup.py  build_layout_review_hub.py  build_ui_data.py  cluster_projection_silhouette.py  compare_poster_layout_proposals.py  compute_neighbors.py  derive_neuroscape_centroids.py  distill_dimensions.py  eval_minilm_to_neuroscape_projector.py  eval_typo_recall.py  evaluate_label_systems.py  fetch_ui_inputs.sh  generate_advanced_global_path_proposals.py  generate_semantic_layout_proposals.py  generate_semantic_path_proposals.py  lint_schema.py  openai_api_smoke.py  openai_batch_smoke.py  plot_poster_layout_floorplan.py  plot_voyage_stage2_umap_3d.py  reference_split_regression_probe.py  run_advanced_global_path_experiment.py  run_analyze_matrix.py  run_embed_matrix.py  run_enrich_abstracts.py  run_fetch_abstracts.py  run_fetch_withdrawn.py  run_gmm_overlap_experiment.py  run_nocd_checkpoint_sweep_experiment.py  run_nocd_classic_predict_experiment.py  sweep_diffusion_variants.py  sweep_global_path_mapalign_variants.py  sweep_global_path_variants.py  validate_compose_recipe_baseline.py  validate_ui_data.sh  verify_proposed_listings.py  write_layout_category_summaries.py  write_topic_group_report.py
site/: .env.example  .gitignore  data-channel.json  lighthouse.config.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vitest.config.ts
tests/: _atlas_fixtures.py  test_assets.py  (+105 more)
(+5476 files in other folders)
