[project]
name = "ohbm2026"
version = "0.1.0"
description = "Local ingestion pipeline for OHBM 2026 Oxford Abstracts data"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
ohbm-ingest = "ohbm2026.assets:main"
ohbm-authors = "ohbm2026.enrichment:authors_main"
ohbm-enrich = "ohbm2026.enrichment:enrich_main"
ohbm-analyze-figures = "ohbm2026.enrichment:analyze_figures_main"
ohbm-embed-minilm = "ohbm2026.neuroscape:minilm_main"
ohbm-embed-hf = "ohbm2026.neuroscape:hf_main"
ohbm-embed-voyage = "ohbm2026.neuroscape:voyage_main"
ohbm-embed-openai = "ohbm2026.neuroscape:openai_main"
ohbm-embed-stage2 = "ohbm2026.neuroscape:stage2_main"
ohbm-apply-published-stage2 = "ohbm2026.neuroscape:apply_pretrained_stage2_main"
ohbm-semantic-analysis = "ohbm2026.neuroscape:semantic_analysis_main"
ohbm-umap-plot = "ohbm2026.neuroscape:umap_main"
ohbm-compare-projections = "ohbm2026.neuroscape:projection_compare_main"
ohbm-optimize-projections = "ohbm2026.neuroscape:projection_optimize_main"
ohbm-analyze-stage2 = "ohbm2026.neuroscape:stage2_analysis_main"
ohbm-reference-metadata = "ohbm2026.openalex:main"
ohbm-export-ui = "ohbm2026.ui:export_ui_main"
ohbm-build-ui = "ohbm2026.ui:build_ui_main"
ohbm-write-manifest = "ohbm2026.neuroscape:manifest_main"
ohbmcli = "ohbm2026.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
